--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "react": "18.3.1",
+    "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-email": "^3.0.1",
