--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -33,14 +33,14 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.1",
     "lucide-react": "^0.452.0",
-    "next": "14.2.15",
+    "next": "15.0.1",
     "nextjs-toploader": "^3.7.15",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
-    "react": "18.3.1",
+    "react": "19.0.0-rc-69d4b800-20241021",
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-email": "^3.0.1",
     "resend": "^4.0.0",
     "server-only": "^0.0.1",
@@ -50,13 +50,17 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "drizzle-kit": "^0.25.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
