--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -41,7 +41,7 @@
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-email": "^3.0.1",
+    "react-email": "^1.10.1",
     "resend": "^4.0.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.3",
