--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
   "rules": {
     "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-explicit-any": "off"
-  }
+		"@typescript-eslint/no-explicit-any": "off",
+		"@typescript-eslint/no-unused-expressions": "off",
+		"react/no-unescaped-entities": "off"
+	}
 }
