--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -36,7 +36,6 @@
     "lucide-react": "^0.452.0",
     "next": "15.0.1",
     "nextjs-toploader": "^3.7.15",
-    "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-calendar": "^5.0.0",
