--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.1",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.452.0",
     "next": "15.0.1",
     "nextjs-toploader": "^3.7.15",
