--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.452.0",
     "next": "15.0.1",
     "nextjs-toploader": "^3.7.15",
+    "nuqs": "^2.1.1",
     "postgres": "^3.4.4",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-calendar": "^5.0.0",
