--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.452.0",
     "next": "15.0.1",
+    "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.1.1",
     "postgres": "^3.4.4",
+    "pwa-asset-generator": "^6.4.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
